--- a/DocStatus/index.html
+++ b/DocStatus/index.html
@@ -20,7 +20,7 @@
       <nav>
         <ul id="navList" class="navList">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Doctor</a></li>
+          <li><a href="#">Doctos</a></li>
           <li><a href="#">Clinics</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
