--- a/DocStatus/index.html
+++ b/DocStatus/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <div class="loginForm">
-      <h3 class="loginHeader">Login</h3>
+      <h3 class="loginHeader">Log in</h3>
       <hr />
       <form action="">
         <input class="usernameInputLogin" type="text" placeholder="Username" />
@@ -41,6 +41,35 @@
           placeholder="Password"
         />
         <button class="submitButtonLogin" onclick="login()">Log In</button>
+        <p class="alreadyAccount">
+          Dont have an Account ?<a onclick="openSignup()">
+            <strong style="color: aquamarine">Sign up</strong></a
+          >
+        </p>
+      </form>
+    </div>
+    <div class="signUpForm">
+      <h3 class="signUpHeader">Sign up</h3>
+      <hr />
+      <form action="">
+        <input class="usernameInputsignUp" type="text" placeholder="Username" />
+        <input class="emailInputsignUp" type="email" placeholder="Email" />
+        <input
+          class="passwordInputsignUp"
+          type="password"
+          placeholder="Password"
+        />
+        <input
+          class="passwordInputsignUp"
+          type="password"
+          placeholder="Confirm Password"
+        />
+        <button class="submitButtonsignUp" onclick="signUp()">Sign up</button>
+        <p class="alreadyAccount">
+          Already have an Account ?<a onclick="openLogin()">
+            <strong style="color: aquamarine">log in</strong></a
+          >
+        </p>
       </form>
     </div>
     <script>
@@ -66,6 +95,15 @@
         } else {
           console.log("Login failed");
         }
+      }
+
+      function openLogin() {
+        document.getElementsByClassName("signUpForm")[0].style.display = "none";
+        document.getElementsByClassName("loginForm")[0].style.display = "flex";
+      }
+      function openSignup() {
+        document.getElementsByClassName("signUpForm")[0].style.display = "flex";
+        document.getElementsByClassName("loginForm")[0].style.display = "none";
       }
     </script>
   </body>
