--- a/DocStatus/index.html
+++ b/DocStatus/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Rubik&display=swap"
       rel="stylesheet"
     />
-    <title>Your App Name</title>
+    <title>DocStatus</title>
   </head>
   <body>
     <header>
@@ -30,7 +30,7 @@
       </button>
     </header>
 
-    <div class="loginForm">
+    <div class="loginForm" style="display: none;">
       <h3 class="loginHeader">Log in</h3>
       <hr />
       <form action="">
