--- a/DocStatus/index.html
+++ b/DocStatus/index.html
@@ -19,10 +19,10 @@
       </div>
       <nav>
         <ul id="navList" class="navList">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Doctos</a></li>
-          <li><a href="#">Clinics</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a class="navLink" href="#">Home</a></li>
+          <li><a class="navLink" href="#">Doctos</a></li>
+          <li><a class="navLink" href="#">Clinics</a></li>
+          <li><a class="navLink" href="#">Contact</a></li>
         </ul>
       </nav>
       <button class="dropDownButton" onclick="openMenu()">
