--- a/DocStatus/index.html
+++ b/DocStatus/index.html
@@ -24,7 +24,7 @@
             <a
               class="navLink"
               href="#"
-              onclick="showOnlySelectedClass('homeContainer')"
+              onclick="showOnlySelectedClass('home')"
               >Home</a
             >
           </li>
@@ -52,7 +52,7 @@
       </button>
     </header>
     <!--HOME PAGE CONTENT-->
-    <div class="homeContainer">
+    <div class="homeContainer home">
       <div class="homeIntro">
         <h2>Welcome to <br /><span>DocStatus</span></h2>
         <hr style="width: 100%" />
@@ -62,18 +62,39 @@
           timing is everything. Your well-being, our priority!
         </p>
       </div>
-
-      <!-- <div class="featuresContainer">
+    </div>
+    <div class="featuresContainer home">
+      <h2>Our Features</h2>
+      <div class="feature">
         <div class="featureHome">
-          <img src="" alt="" />
+          <img src="./filter.png" alt="" />
           <div class="featureInfo">
             <h3>Filtering</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </p>
+            <p>Helps to find the best doctor according to your requirement</p>
           </div>
         </div>
-      </div> -->
+        <div class="featureHome">
+          <img src="./time.png" alt="" />
+          <div class="featureInfo">
+            <h3>Real Time Info</h3>
+            <p>We Provide Real-time Info of Doctors and Hospitals</p>
+          </div>
+        </div>
+        <div class="featureHome">
+          <img src="./doctor.png" alt="" />
+          <div class="featureInfo">
+            <h3>Doctors profile</h3>
+            <p>Doctors profile to help you know about your doctor</p>
+          </div>
+        </div>
+        <div class="featureHome">
+          <img src="./location.png" alt="" />
+          <div class="featureInfo">
+            <h3>Navigator</h3>
+            <p>Helps to find the Location of local Clinics and Hospitals</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!--Login Form-->
