--- a/DocStatus/index.html
+++ b/DocStatus/index.html
@@ -95,7 +95,7 @@
     </div>
 
     <!--Login Form-->
-    <div class="loginForm" style="display: none">
+    <div class="loginForm" style="display: flex">
       <h3 class="loginHeader">Log in</h3>
       <hr />
       <form action="">
@@ -139,7 +139,7 @@
       </form>
     </div>
     <!--HOSPITAL BOARD-->
-    <div class="hospitalsBoard">
+    <div class="hospitalsBoard" style="display: none;">
       <h2 class="cityHospitalHeading">Hospitals in Sukkur</h2>
       <hr
         style="width: 100%; background-color: aquamarine; margin-bottom: 30px"
@@ -223,7 +223,7 @@
 
     <!--Doctor Status of HOSPITALS-->
 
-    <div class="doctorStatusBoard">
+    <div class="doctorStatusBoard"  style="display: none">
       <h3>Doctors in Hira Hospital</h3>
       <hr style="width: 100%" />
       <div class="doctor">
